Fix: prevent math and text snippets from being cut off on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -851,7 +851,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-content blockquote,
 .post-full-comments,
 .footnotes {
-  min-width: 100%;
+  width: 100%;
 }
 
 .post-full-content h2:target,
@@ -1581,6 +1581,20 @@ pre.runkit-element {
   flex-direction: column;
   align-items: center;
   max-width: 920px;
+}
+
+.post-content .katex-display > .katex > .katex-html {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-content .katex .base {
+  display: inline;
+  margin: 0.5em 0;
+  white-space: unset;
+  word-break: break-word;
 }
 
 .medium-migrated-article > p:first-child {
